--- a/android/build.gradle
+++ b/android/build.gradle
@@ -23,13 +23,15 @@ apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 28
-
     defaultConfig {
         minSdkVersion 16
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     lintOptions {
         disable 'InvalidPackage'
+    }
+    packagingOptions {
+        doNotStrip '**.so'
     }
 }
 
